2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/PcFileCache.cs: Don't try to
	  store custom data if a package is not valid.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/PcFileCache.cs: Another fix to
	  make it build with .net 2.0.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/PcFileCache.cs: Make it
	  buildable with .net 2.0.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.csproj:
	* MonoDevelop.Core.Assemblies/PcFileCache.cs:
	* MonoDevelop.Core.Assemblies/SystemPackage.cs:
	* MonoDevelop.Core.Assemblies/AssemblyContext.cs:
	* MonoDevelop.Core.Assemblies/MonoTargetRuntime.cs:
	* MonoDevelop.Core.Assemblies/LibraryPcFileCache.cs:
	* MonoDevelop.Core.Assemblies/DirectoryAssemblyContext.cs:
	  Renamed some classes used by PcFileCache. Split PcFileCache
	  in two files, to make it easier to reuse in Mono.Addins.

2009-08-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/TargetRuntime.cs: Added an event
	  which is fired when the runtime has finished initializing.

	* MonoDevelop.Core.Assemblies/SystemAssemblyService.cs: Load
	  the user assembly context after the runtimes have been
	  initialized.

	* MonoDevelop.Core.Assemblies/DirectoryAssemblyContext.cs:
	  Don't update the packages until the current runtime has been
	  initialized. It is required to find the target framework of
	  the assemblies.

	* MonoDevelop.Core/Runtime.cs: Don't call shutdown here. The
	  Main method does it.

2009-08-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/TargetRuntime.cs:
	* MonoDevelop.Core.Assemblies/SystemPackage.cs:
	* MonoDevelop.Core.Assemblies/AssemblyContext.cs:
	* MonoDevelop.Core.Assemblies/MonoTargetRuntime.cs:
	* MonoDevelop.Core.Assemblies/SystemAssemblyService.cs:
	* MonoDevelop.Core.AddIns/PackageInstalledCondition.cs: